Fix comment radial, bio width on mobile

--- a/app/assets/stylesheets/components/_circular_progress_bar.scss
+++ b/app/assets/stylesheets/components/_circular_progress_bar.scss
@@ -27,7 +27,9 @@
     right: 0.5rem;
     width: 15%;
     @media only screen and (max-width: 700px) {
-      width: 12%;
+      width: 13%;
+      top: 0.7rem;
+      right: 0.7rem;
     }
   }
 }
