--- a/app/assets/stylesheets/components/_profile_user_info.scss
+++ b/app/assets/stylesheets/components/_profile_user_info.scss
@@ -119,6 +119,7 @@
       flex-basis: 100%;
       max-width: 100%;
       align-self: center;
+      min-width: 80vw;
     }
 
     .title {
